# PRISM

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
docs/: architecture.md  automated_collection_v1.md  availability_schedule_adapter_v1.md  market_odds_adapter_v1.md  team_strength_form_adapter_v1.md
scripts/: __init__.py  promotion_gate.py
specs/: adjustment-engine.md  automated-match-intelligence-pipeline-v1.md  baseline-prediction-models-v1.md  benchmark-promotion-gate-v1.md  calibration-dataset-export-v1.md  canonical-data-model.md  confidence-engine.md  consensus-engine.md  decision-engine.md  end-to-end-prediction-path-v1.md  evaluation-dataset-import-v1.md  evidence-engine.md  football-rule-pack.md  github-ci-promotion-enforcement-v1.md  historical-benchmark-comparison-report-v1.md  historical-benchmark-comparison-v1.md  intelligence-match-request-normalization-v1.md  model-feature-construction-v1.md  orchestrator.md  prediction-model-interface-v1.md  prediction-report-renderer-v1.md  prediction-report-v1.md  promotion-decision-report-v1.md  real-match-evaluation-harness-v1.md  rule-engine.md  rule-governance.md  scoreline-engine.md
src/: __init__.py
tests/: test_adjustment_engine.py  test_adjustment_models.py  test_availability_schedule_adapter.py  test_baseline_prediction_models.py  test_benchmark_comparison.py  test_benchmark_comparison_report.py  test_benchmark_promotion.py  test_collection_v1.py  test_confidence_engine.py  test_consensus_engine.py  test_consensus_integration.py  test_consensus_models.py  test_decision_engine.py  (+28 more)
(+78 files in other folders)
